Changed word Quiz to Exam in README.md file and in HTML file, added date and time stamp to displayResult() function

--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
         <!-- Font Awesome -->
         <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> -->
         
-        <title>The Geek Next Door - Quiz Demo</title>
+        <title>The Geek Next Door - Exam Demo</title>
     </head>
 
     <body>
         <div class="container">
-            <h1>Quiz Demo</h1>
+            <h1>Module 1 Demo</h1>
             <div id="quiz"></div>
             <div id="result" class="result"></div>
             <button id="submit" class="button">Submit</button>
