added a modal at page load up asking the user for their first and last name which is used at the end of the exam when displaying their exam results

--- a/index.html
+++ b/index.html
@@ -16,6 +16,17 @@
     </head>
 
     <body>
+
+        <div id="nameModal" class="modal">
+            <div class="modal-content">
+                <span class="close" id="closeNameModal">&times;</span>
+                <h2>Please Enter Your First and Last Name</h2>
+                <input type="text" id="firstName" placeholder="First Name">
+                <input type="text" id="lastName" placeholder="Last Name">
+                <button id="nameSubmit">Submit</button>
+            </div>
+        </div>        
+        
         <div class="container">
             <h1>Module 1 Demo</h1>
             <div id="quiz"></div>
