started to style the user input modal, added font awesome close icon, fixed submit button to make it consistent with the rest of the page

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <link rel="stylesheet" href="css/styles.css">
 
         <!-- Font Awesome -->
-        <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> -->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         
         <title>The Geek Next Door - Exam Demo</title>
     </head>
@@ -19,11 +19,12 @@
 
         <div id="nameModal" class="modal">
             <div class="modal-content">
-                <span class="close" id="closeNameModal">&times;</span>
+                <span class="close" id="closeNameModal"><i class="fa fa-times-circle fa-2x" aria-hidden="true"></i></span>
+                <!-- <span class="close" id="closeNameModal">&times;</span> -->
                 <h2>Please Enter Your First and Last Name</h2>
                 <input type="text" id="firstName" placeholder="First Name">
                 <input type="text" id="lastName" placeholder="Last Name">
-                <button id="nameSubmit">Submit</button>
+                <button id="nameSubmit" class="button">Submit</button>
             </div>
         </div>        
         
