--- a/index.html
+++ b/index.html
@@ -19,11 +19,10 @@
 
         <div id="nameModal" class="modal">
             <div class="modal-content">
-                <span class="close" id="closeNameModal"><i class="fa fa-times-circle fa-2x" aria-hidden="true"></i></span>
-                <!-- <span class="close" id="closeNameModal">&times;</span> -->
+                <!-- <span class="close" id="closeNameModal"><i class="fa fa-times-circle fa-2x" aria-hidden="true"></i></span> -->
                 <h2>Please Enter Your First and Last Name</h2>
-                <input type="text" id="firstName" placeholder="First Name">
-                <input type="text" id="lastName" placeholder="Last Name">
+                <input type="text" id="firstName" placeholder="First Name" aria-label="Type your first name here">
+                <input type="text" id="lastName" placeholder="Last Name" aria-label="Type your last name here">
                 <button id="nameSubmit" class="button">Submit</button>
             </div>
         </div>        
