--- a/index.html
+++ b/index.html
@@ -1,46 +1,133 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
     <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <!-- Required meta tags -->
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
         <!-- Bootstrap CSS -->
-        <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous"> -->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
         <link rel="stylesheet" href="css/styles.css">
 
         <!-- Font Awesome -->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-        
-        <title>The Geek Next Door - Exam Demo</title>
+
+        <title>The Geek Next Door - Exams Demo</title>
     </head>
+  
+    <body class="bg-dark">
 
-    <body>
-
-        <div id="nameModal" class="modal">
-            <div class="modal-content">
-                <!-- <span class="close" id="closeNameModal"><i class="fa fa-times-circle fa-2x" aria-hidden="true"></i></span> -->
-                <h2>Please Enter Your First and Last Name</h2>
-                <input type="text" id="firstName" placeholder="First Name" aria-label="Type your first name here">
-                <input type="text" id="lastName" placeholder="Last Name" aria-label="Type your last name here">
-                <button id="nameSubmit" class="button">Submit</button>
-            </div>
-        </div>        
+        <!-- Navbar -->
+        <nav class="navbar navbar-expand-sm navbar-light px-3">
+            <!-- Logo -->
+            <div>
+                <a class="logo" href="index.html">
+                    <img class="navbar-brand" src="img/theGeekNextDoorLogo.png" alt="The Geek Next Door Logo">
+                </a>
+            </div>       
+        </nav>
         
-        <div class="container">
-            <h1>Module 1 Demo</h1>
-            <div id="quiz"></div>
-            <div id="result" class="result"></div>
-            <button id="submit" class="button">Submit</button>
-            <button id="retry" class="button hide">Retry</button>
-            <button id="showAnswer" class="button hide">Show Incorrect Answer(s)</button>
-          </div>
+        <div class="container text-center text-light mb-5" id="">
+            <h1 class="">Exams Demo</h1>  
+        </div>
+
+        <div class="container text-center text-light" id="">
+            <p class="fw-bold">Our Solar System</p>
+            <div class="row">
+                <div class="col">
+                    <p class="">
+                        <a class="projectLink text-decoration-none" href="module1.html" target="">Module 1 Exam</a>
+                    </p>
+                </div>
+                <div class="col">
+                    <p class="">
+                        <a class="projectLink text-decoration-none" href="module2.html" target="_blank">Module 2 Exam</a>
+                    </p>
+                </div>
+                <div class="col">
+                    <p class="">
+                        <a class="projectLink text-decoration-none" href="" target="">Final Exam</a>
+                    </p>
+                </div>
+            </div>
+        </div>
+
+        <div class="container text-center text-light my-5" id="">
+            <p class="fw-bold">Dinosaurs</p>
+            <div class="row">
+                <div class="col">
+                    <p class="">
+                        <a class="projectLink text-decoration-none" href="" target="">Module 1 Exam</a>
+                    </p>
+                </div>
+                <div class="col">
+                    <p class="">
+                        <a class="projectLink text-decoration-none" href="" target="_blank">Module 2 Exam</a>
+                    </p>
+                </div>
+                <div class="col">
+                    <p class="">
+                        <a class="projectLink text-decoration-none" href="" target="_blank">Module 3 Exam</a>
+                    </p>
+                </div>
+                <div class="col">
+                    <p class="">
+                        <a class="projectLink text-decoration-none" href="" target="_blank">Module 4 Exam</a>
+                    </p>
+                </div>
+                <div class="col">
+                    <p class="">
+                        <a class="projectLink text-decoration-none" href="" target="">Final Exam</a>
+                    </p>
+                </div>
+            </div>
+        </div>
+
+        <div class="container text-center text-light mb-5" id="">
+            <p class="fw-bold">Vehicles</p>
+            <div class="row">
+                <div class="col">
+                    <p class="">
+                        <a class="projectLink text-decoration-none" href="" target="">Module 1 Exam</a>
+                    </p>
+                </div>
+                <div class="col">
+                    <p class="">
+                        <a class="projectLink text-decoration-none" href="" target="_blank">Module 2 Exam</a>
+                    </p>
+                </div>
+                <div class="col">
+                    <p class="">
+                        <a class="projectLink text-decoration-none" href="" target="_blank">Module 3 Exam</a>
+                    </p>
+                </div>
+                <div class="col">
+                    <p class="">
+                        <a class="projectLink text-decoration-none" href="" target="">Final Exam</a>
+                    </p>
+                </div>
+            </div>
+        </div>
+
+        <!-- Back to top button -->
+        <a id="btt-button" class="text-decoration-none"></a>
+
+        <!-- Footer -->
+        <footer class="container-fluid m-auto">
+            <div class="row m-auto" style="height: 100px;">
+                <!-- Copyright -->
+                <div class="col d-flex justify-content-center text-light">
+                    <p class="align-middle my-auto text-center">2023 The Geek Next Door</p>
+                </div>
+            </div>
+        </footer> 
 
         <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
-        <!-- <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js" integrity="sha384-fbbOQedDUMZZ5KreZpsbe1LCZPVmfTnH7ois6mU1QK+m14rQ1l2bGBq41eYeM/fS" crossorigin="anonymous"></script>
-        <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script> -->
-        <script src="js/main.js"></script> 
+        <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+        <script src="js/main.js"></script>
+
     </body>
 
 </html>
