added logo to module1.js file and fixed display property for logo and container div

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <body class="bg-dark">
 
         <!-- Navbar -->
-        <nav class="navbar navbar-expand-sm navbar-light px-3">
+        <nav class="navbar navbar-expand-sm px-3">
             <!-- Logo -->
             <div>
                 <a class="logo" href="index.html">
@@ -62,17 +62,17 @@
                 </div>
                 <div class="col">
                     <p class="">
-                        <a class="projectLink text-decoration-none" href="" target="_blank">Module 2 Exam</a>
+                        <a class="projectLink text-decoration-none" href="" target="">Module 2 Exam</a>
                     </p>
                 </div>
                 <div class="col">
                     <p class="">
-                        <a class="projectLink text-decoration-none" href="" target="_blank">Module 3 Exam</a>
+                        <a class="projectLink text-decoration-none" href="" target="">Module 3 Exam</a>
                     </p>
                 </div>
                 <div class="col">
                     <p class="">
-                        <a class="projectLink text-decoration-none" href="" target="_blank">Module 4 Exam</a>
+                        <a class="projectLink text-decoration-none" href="" target="">Module 4 Exam</a>
                     </p>
                 </div>
                 <div class="col">
@@ -93,12 +93,12 @@
                 </div>
                 <div class="col">
                     <p class="">
-                        <a class="projectLink text-decoration-none" href="" target="_blank">Module 2 Exam</a>
+                        <a class="projectLink text-decoration-none" href="" target="">Module 2 Exam</a>
                     </p>
                 </div>
                 <div class="col">
                     <p class="">
-                        <a class="projectLink text-decoration-none" href="" target="_blank">Module 3 Exam</a>
+                        <a class="projectLink text-decoration-none" href="" target="">Module 3 Exam</a>
                     </p>
                 </div>
                 <div class="col">
