--- a/module1.html
+++ b/module1.html
@@ -17,6 +17,16 @@
 
     <body>
 
+        <!-- Navbar -->
+        <nav class="navbar navbar-expand-sm px-3">
+            <!-- Logo -->
+            <div>
+                <a class="logo" href="index.html">
+                    <img class="navbar-brand" src="img/theGeekNextDoorLogo.png" alt="The Geek Next Door Logo">
+                </a>
+            </div>       
+        </nav>
+
         <div id="nameModal" class="modal">
             <div class="modal-content">
                 <!-- <span class="close" id="closeNameModal"><i class="fa fa-times-circle fa-2x" aria-hidden="true"></i></span> -->
