--- a/module1.html
+++ b/module1.html
@@ -45,14 +45,17 @@
             <button id="mainMenu" class="button hide">Main Menu</button>
             <!-- <button id="retry" class="button hide">Retry</button> -->
             <button id="showAnswer" class="button hide">Show Incorrect Answer(s)</button>
-          </div>
+        </div>
+
+        <!-- Back to top button -->
+        <a id="btt-button" class="text-decoration-none"></a>
 
         <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
         <!-- <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js" integrity="sha384-fbbOQedDUMZZ5KreZpsbe1LCZPVmfTnH7ois6mU1QK+m14rQ1l2bGBq41eYeM/fS" crossorigin="anonymous"></script>
-        <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script> -->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js" integrity="sha384-fbbOQedDUMZZ5KreZpsbe1LCZPVmfTnH7ois6mU1QK+m14rQ1l2bGBq41eYeM/fS" crossorigin="anonymous"></script> -->
+        <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
         <script src="js/module1.js"></script>
-        
+
     </body>
 
 </html>
