--- a/module1.html
+++ b/module1.html
@@ -5,8 +5,6 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <!-- Bootstrap CSS -->
-        <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous"> -->
         <link rel="stylesheet" href="css/modules.css">
 
         <!-- Font Awesome -->
@@ -18,7 +16,7 @@
     <body>
 
         <!-- Navbar -->
-        <nav class="navbar navbar-expand-sm px-3">
+        <nav class="navbar">
             <!-- Logo -->
             <div>
                 <a class="logo" href="index.html">
@@ -50,9 +48,12 @@
         <!-- Back to top button -->
         <a id="btt-button" class="text-decoration-none"></a>
 
-        <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
-        <!-- <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js" integrity="sha384-fbbOQedDUMZZ5KreZpsbe1LCZPVmfTnH7ois6mU1QK+m14rQ1l2bGBq41eYeM/fS" crossorigin="anonymous"></script> -->
+        <!-- Footer -->
+        <footer class="">
+            <p class="copyright">2023 The Geek Next Door</p>
+        </footer> 
+
+        <!-- Option 1: jQuery -->
         <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
         <script src="js/module1.js"></script>
 
