--- a/index.html
+++ b/index.html
@@ -36,17 +36,17 @@
             <div class="row">
                 <div class="col">
                     <p class="">
-                        <a class="projectLink text-decoration-none" href="module1.html" target="">Module 1 Exam</a>
+                        <a class="examsLink text-decoration-none" href="module1.html" target="">Module 1 Exam</a>
                     </p>
                 </div>
                 <div class="col">
                     <p class="">
-                        <a class="projectLink text-decoration-none" href="module2.html" target="_blank">Module 2 Exam</a>
+                        <a class="examsLink text-decoration-none" href="module2.html" target="_blank">Module 2 Exam</a>
                     </p>
                 </div>
                 <div class="col">
                     <p class="">
-                        <a class="projectLink text-decoration-none" href="" target="">Final Exam</a>
+                        <a class="examsLink text-decoration-none" href="" target="">Final Exam</a>
                     </p>
                 </div>
             </div>
@@ -57,27 +57,27 @@
             <div class="row">
                 <div class="col">
                     <p class="">
-                        <a class="projectLink text-decoration-none" href="" target="">Module 1 Exam</a>
+                        <a class="examsLink text-decoration-none" href="" target="">Module 1 Exam</a>
                     </p>
                 </div>
                 <div class="col">
                     <p class="">
-                        <a class="projectLink text-decoration-none" href="" target="">Module 2 Exam</a>
+                        <a class="examsLink text-decoration-none" href="" target="">Module 2 Exam</a>
                     </p>
                 </div>
                 <div class="col">
                     <p class="">
-                        <a class="projectLink text-decoration-none" href="" target="">Module 3 Exam</a>
+                        <a class="examsLink text-decoration-none" href="" target="">Module 3 Exam</a>
                     </p>
                 </div>
                 <div class="col">
                     <p class="">
-                        <a class="projectLink text-decoration-none" href="" target="">Module 4 Exam</a>
+                        <a class="examsLink text-decoration-none" href="" target="">Module 4 Exam</a>
                     </p>
                 </div>
                 <div class="col">
                     <p class="">
-                        <a class="projectLink text-decoration-none" href="" target="">Final Exam</a>
+                        <a class="examsLink text-decoration-none" href="" target="">Final Exam</a>
                     </p>
                 </div>
             </div>
@@ -88,22 +88,22 @@
             <div class="row">
                 <div class="col">
                     <p class="">
-                        <a class="projectLink text-decoration-none" href="" target="">Module 1 Exam</a>
+                        <a class="examsLink text-decoration-none" href="" target="">Module 1 Exam</a>
                     </p>
                 </div>
                 <div class="col">
                     <p class="">
-                        <a class="projectLink text-decoration-none" href="" target="">Module 2 Exam</a>
+                        <a class="examsLink text-decoration-none" href="" target="">Module 2 Exam</a>
                     </p>
                 </div>
                 <div class="col">
                     <p class="">
-                        <a class="projectLink text-decoration-none" href="" target="">Module 3 Exam</a>
+                        <a class="examsLink text-decoration-none" href="" target="">Module 3 Exam</a>
                     </p>
                 </div>
                 <div class="col">
                     <p class="">
-                        <a class="projectLink text-decoration-none" href="" target="">Final Exam</a>
+                        <a class="examsLink text-decoration-none" href="" target="">Final Exam</a>
                     </p>
                 </div>
             </div>
