--- a/index.html
+++ b/index.html
@@ -53,11 +53,11 @@
         </div>
 
         <div class="container text-center text-light my-5" id="">
-            <p class="fw-bold">Dinosaurs</p>
+            <p class="fw-bold">Math</p>
             <div class="row">
                 <div class="col">
                     <p class="">
-                        <a class="examsLink text-decoration-none" href="" target="">Module 1 Exam</a>
+                        <a class="examsLink text-decoration-none" href="mathModule1.html" target="">Module 1 Exam</a>
                     </p>
                 </div>
                 <div class="col">
@@ -117,7 +117,7 @@
             <div class="row m-auto" style="height: 100px;">
                 <!-- Copyright -->
                 <div class="col d-flex justify-content-center text-light">
-                    <p class="align-middle my-auto text-center">2023 The Geek Next Door</p>
+                    <p class="align-middle my-auto text-center">2024 The Geek Next Door</p>
                 </div>
             </div>
         </footer> 
