--- a/index.html
+++ b/index.html
@@ -36,12 +36,12 @@
             <div class="row">
                 <div class="col">
                     <p class="">
-                        <a class="examsLink text-decoration-none" href="module1.html" target="">Module 1 Exam</a>
+                        <a class="examsLink text-decoration-none" href="module1.html" target="">Planets Exam</a>
                     </p>
                 </div>
                 <div class="col">
                     <p class="">
-                        <a class="examsLink text-decoration-none" href="module2.html" target="_blank">Module 2 Exam</a>
+                        <a class="examsLink text-decoration-none" href="module2.html" target="_blank">Dwarf Planets Exam</a>
                     </p>
                 </div>
                 <div class="col">
@@ -57,12 +57,12 @@
             <div class="row">
                 <div class="col">
                     <p class="">
-                        <a class="examsLink text-decoration-none" href="mathModule1.html" target="">Module 1 Exam</a>
+                        <a class="examsLink text-decoration-none" href="mathModule1.html" target="">Addition Exam</a>
                     </p>
                 </div>
                 <div class="col">
                     <p class="">
-                        <a class="examsLink text-decoration-none" href="" target="">Module 2 Exam</a>
+                        <a class="examsLink text-decoration-none" href="mathModule2.html" target="">Subtraction Exam</a>
                     </p>
                 </div>
                 <div class="col">
