changed title of ech html file to reflect better name of exam, changed html and js file names to also better reflect exam name

--- a/index.html
+++ b/index.html
@@ -36,12 +36,12 @@
             <div class="row">
                 <div class="col">
                     <p class="">
-                        <a class="examsLink text-decoration-none" href="module1.html" target="">Planets Exam</a>
+                        <a class="examsLink text-decoration-none" href="planetsExam.html" target="">Planets Exam</a>
                     </p>
                 </div>
                 <div class="col">
                     <p class="">
-                        <a class="examsLink text-decoration-none" href="module2.html" target="_blank">Dwarf Planets Exam</a>
+                        <a class="examsLink text-decoration-none" href="dwarfPlanetsExam.html" target="_blank">Dwarf Planets Exam</a>
                     </p>
                 </div>
                 <div class="col">
@@ -57,12 +57,12 @@
             <div class="row">
                 <div class="col">
                     <p class="">
-                        <a class="examsLink text-decoration-none" href="mathModule1.html" target="">Addition Exam</a>
+                        <a class="examsLink text-decoration-none" href="additionExam.html" target="">Addition Exam</a>
                     </p>
                 </div>
                 <div class="col">
                     <p class="">
-                        <a class="examsLink text-decoration-none" href="mathModule2.html" target="">Subtraction Exam</a>
+                        <a class="examsLink text-decoration-none" href="subtractionExam.html" target="">Subtraction Exam</a>
                     </p>
                 </div>
                 <div class="col">
